<resources>
    <string name="app_name">My Application</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="product_id">product ID</string>
    <string name="product_name">product Name</string>
    <string name="quantity">quantity</string>
    <string name="price">Price</string>
    <string name="add_product">Add Product:</string>
    <string name="pic_id">pic id</string>
    <string name="remove_product">Remove Product:</string>
    <string name="id_product">ID product</string>
    <string name="pay">Pay !</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_order_is_on_the_way">your order is on the way :)</string>
    <string name="todo">TODO</string>

    <!--pictures -->
    <array name= "pictures">
        <item>@drawable/red_adidas</item>
        <!--<item>@drawable/black_shoes</item>-->
        <!--<item>@drawable/black_coat</item>-->
        <!--<item>@drawable/casual_dress</item>-->
        <!--<item>@drawable/evening_dress</item>-->
        <!--<item>@drawable/pink_shirt</item>-->
        <!--<item>@drawable/white_shirt</item>-->
        <!--<item>@drawable/wedding_dress</item>-->
    </array>

    <!--Names of products-->
    <string-array name= "productName">
        <item>red_adidas</item>
        <!--<item>black_shoes</item>-->
        <!--<item>black_coat</item>-->
        <!--<item>casual_dress</item>-->
        <!--<item>evening_dress</item>-->
        <!--<item>pink_shirt</item>-->
        <!--<item>white_shirt</item>-->
        <!--<item>wedding_dress</item>-->
    </string-array>

    <!--price-->
    <string-array name = "price">
        <item>140</item>
        <item>120</item>
        <item>150</item>
        <item>90</item>
        <item>170</item>
        <item>100</item>
        <item>80</item>
        <item>300</item>
    </string-array>
</resources>


