<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/test1"
        android:layout_width="209dp"
        android:layout_height="66dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="345dp"
        android:fontFamily="sans-serif"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textColor="#FF1493"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="60dp"
        android:text="@string/your_order_is_on_the_way"
        android:textAlignment="center"
        android:textColor="#FF1493"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="293dp"
        android:layout_height="249dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test1"
        app:srcCompat="@drawable/delivery"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>
